src/test/run-pass/unique-drop-complex.rs
fn main() {
    let x = ~[0,0,0,0,0];
}