src/test/compile-fail/attr-before-let.rs
fn main() {
    #[attr]
    let _i = 0; //! ERROR expected item
}